[tool.poetry]
name = "deep-dict-update"
version = "0.1.5"
description = "Recursively update nested dictionaries with another dictionary"
authors = ["Shivam Malpani"]
license = "MIT"
readme = "README.md"
packages = [{include = "deep_dict_update"}]

[tool.poetry.dependencies]
python = "^3.6"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
